--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
   "fiveServer.injectBody": false,
   "liveServer.settings.port": 5504,
   "cSpell.words": [
-    "Ijeoma"
+    "Ijeoma",
+    "socialmedia"
   ]
 }
